last commit before archive

--- a/404.html
+++ b/404.html
@@ -2,16 +2,14 @@
 <html lang="en">
 	<head>
 		<title>404 - JGSBroadcast</title>
-		<meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta charset="utf-8" />
 		<link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
 		<link rel="stylesheet" href="/css/main.css" type="text/css" />
 		<link rel="stylesheet" href="/css/resume.css" type="text/css" />
-		<link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
-		<meta charset="utf-8" />
-		<!--Icons-->
-    <script defer src="/js/fontawesome-all.min.js"></script>
-    <!--Animations-->
+		<link rel="icon" type="image/png" href="/images/favicon.png" />
 		<link rel="stylesheet" href="/css/animate.min.css" type="text/css" />
+    <script defer src="/js/fontawesome-all.min.js"></script>
 	</head>
 	<body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -44,9 +42,8 @@
     <script src="/js/jquery.min.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
 		<script src="/js/theater.min.js"></script>
-    <!--Navbar-->
     <script src="/js/navbar.js"></script>
-    <!--Typing Animation-->
+    <!-- Typing Animation -->
 		<script>
     	var theater = theaterJS();
 
