--- a/about.html
+++ b/about.html
@@ -2,12 +2,11 @@
 <html lang="en">
 	<head>
 		<title>About - JGSBroadcast</title>
-		<meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta charset="utf-8" />
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
 		<link rel="stylesheet" href="css/main.css" type="text/css" />
-		<link rel="shortcut icon" type="image/png" href="images/favicon.png" />
-		<meta charset="utf-8" />
-		<!--Icons-->
+		<link rel="icon" type="image/png" href="images/favicon.png" />
     <script defer src="js/fontawesome-all.min.js"></script>
 	</head>
 	<body>
@@ -92,7 +91,6 @@
     </footer>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-    <!--Navbar-->
 		<script src="js/navbar.js"></script>
 	</body>
 </html>
