--- a/maps.html
+++ b/maps.html
@@ -26,7 +26,6 @@
             <li><a href="./">Home</a></li>
             <li class="active"><a onclick="window.location = '#">Maps <span class="sr-only">(current)</span></a></li>
             <li><a href="mods">Mods</a></li>
-            <li><a href="about">About Me</a></li>
           </ul>
         </div>
       </div>
@@ -57,7 +56,7 @@
           <p>Made with <span class="fa fa-heart fa-lg" aria-hidden="true"></span><span class="sr-only">love</span> by JGSB</p>
         </div>
         <div class="col-sm-6 icons">
-          <a onclick="window.location = 'https://www.youtube.com/user/JGSBroadcast">
+          <a href="https://www.youtube.com/user/JGSBroadcast">
             <span class="fa-stack fa-lg">
               <span class="fa fa-circle fa-stack-2x"></span>
               <span class="fab fa-youtube fa-stack-1x"></span>
@@ -65,7 +64,7 @@
             <span class="sr-only">YouTube</span>
           </a>
           <a>&nbsp;</a>
-          <a onclick="window.location = 'https://twitter.com/JGSBroadcast">
+          <a href="https://twitter.com/JGSBroadcast">
             <span class="fa-stack fa-lg">
               <span class="fa fa-circle fa-stack-2x"></span>
               <span class="fab fa-twitter fa-stack-1x"></span>
@@ -73,15 +72,7 @@
             <span class="sr-only">Twitter</span>
           </a>
           <a>&nbsp;</a>
-          <a onclick="window.location = 'https://plus.google.com/b/108514584765035958627/108514584765035958627">
-            <span class="fa-stack fa-lg">
-              <span class="fa fa-circle fa-stack-2x"></span>
-              <span class="fab fa-google-plus-g fa-stack-1x"></span>
-            </span>
-            <span class="sr-only">Google+</span>
-          </a>
-          <a>&nbsp;</a>
-          <a onclick="window.location = 'https://github.com/JGSBroadcast">
+          <a href="https://github.com/JGSBroadcast">
             <span class="fa-stack fa-lg">
               <span class="fa fa-circle fa-stack-2x"></span>
               <span class="fab fa-github fa-stack-1x"></span>
