--- a/maps.html
+++ b/maps.html
@@ -19,12 +19,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" onclick="window.location = '#">JGSBroadcast</a>
+          <a class="navbar-brand" href="#">JGSBroadcast</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="./">Home</a></li>
-            <li class="active"><a onclick="window.location = '#">Maps <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="#">Maps <span class="sr-only">(current)</span></a></li>
             <li><a href="mods">Mods</a></li>
           </ul>
         </div>
